<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37d083"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/choosetypebtlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/choosebt1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choosetype1"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/choosebt2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choosetype2"
            android:textColor="#ffffff" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/nameinputswitch" />

    <LinearLayout
        android:id="@+id/addlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/nameinfoinput"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:visibility="gone"
            android:background="#15dafd" />

        <Button
            android:id="@+id/addbt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/addbt"
            android:visibility="gone"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ListView
        android:id="@+id/inputlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choosetypebtlayout"
        android:layout_below="@+id/addlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:background="#f5edc3" >
    </ListView>

</RelativeLayout>